<resources>
    <string name="app_name">Quiz App</string>

    <string name="profile_picture">Profile Picture</string>
    <string name="edit_avatar">Edit Avatar</string>
    <string name="username_label">Username :</string>
    <string name="email_label">Email :</string>
    <string name="currPass_label">Current Password :</string>
    <string name="newPass_label">New Password : :</string>

    <string name="current_password_label">Current Password Label</string>
    <string name="new_password_label">New Password Label</string>

    <string name="save_change">Save Change</string>


    // avatar
    <string name="avatar_1">avatar 1</string>
    <string name="avatar_2">avatar 2</string>
    <string name="avatar_3">avatar 3</string>
    <string name="avatar_4">avatar 4</string>
    <string name="pfp_ava">pfp ava</string>
    <string name="avatar_5">avatar 5</string>
    <string name="avatar_6">avatar 6</string>
    <string name="avatar_7">avatar 7</string>
    <string name="avatar_8">avatar 8</string>
    <string name="avatar_9">avatar 9</string>
    <string name="done">Done</string>

    <string name="home">nav bar home</string>
    <string name="profile">nav bar home</string>
    <string name="score">nav bar score</string>
    <string name="select">nav bar select</string>

    <string name="username">Leehan</string>
    <string name="user_email">leehan04@gmail.com</string>
    <string name="setting">Setting</string>
    <string name="logout">Log Out</string>
    <string name="next">next button</string>

    <string name="next_game">Next</string> // after game score page
    <string name="play_again">Play Again?</string> // after game score page

    <string name="total_score_title">TOTAL SCORE</string>
    <string name="best_score_value">: %1$s</string>
    <string name="fastest_time_value">: %1$s</string>
    <string name="subject_score_label">%1$s\nSCORE</string>

    <string name="eng_label">ENGLISH\nSCORE</string>
    <string name="math_label">MATHEMATICS\nSCORE</string>
    <string name="scn_label">SCIENCE\n  SCORE</string>

    <string name="best_score_label">BEST SCORE</string>
    <string name="fastest_time">FASTEST TIME</string>


    // page label
    <string name="profile_page"> PROFILE </string>
    <string name="edit_profile_page"> EDIT PROFILE </string>

    <string name="default_web_client_id">YOUR_GOOGLE_OAUTH_CLIENT_ID.apps.googleusercontent.com</string>



</resources>