<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="347dp"
        android:layout_height="614dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/pfp"
            android:contentDescription="@string/profile_picture"/>

        <TextView
            android:id="@+id/username_txt"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:paddingStart="23dp"
            android:paddingEnd="16dp"
            android:text="@string/username_label"
            android:labelFor="@id/username" />

        <EditText
            android:id="@+id/username"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="250dp"
            android:autofillHints="username"
            android:background="@drawable/edit_text_rounded_corner" />

        <TextView
            android:id="@+id/email_txt"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="310dp"
            android:paddingStart="23dp"
            android:paddingEnd="16dp"
            android:text="@string/email_label"
            android:labelFor="@id/email" />

        <EditText
            android:id="@+id/email"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="330dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:autofillHints="email"
            android:background="@drawable/edit_text_rounded_corner" />

        <TextView
            android:id="@+id/curr_pass_txt"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="390dp"
            android:paddingStart="23dp"
            android:paddingEnd="5dp"
            android:text="@string/currPass_label"
            android:labelFor="@id/curr_pass"/>

        <EditText
            android:id="@+id/curr_pass"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="410dp"
            android:ems="10"
            android:inputType="textPassword"
            android:autofillHints="currPass"
            android:background="@drawable/edit_text_rounded_corner" />

        <TextView
            android:id="@+id/new_pass_txt"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="470dp"
            android:paddingStart="23dp"
            android:paddingEnd="16dp"
            android:text="@string/newPass_label"
            android:labelFor="@id/new_pass"/>

        <EditText
            android:id="@+id/new_pass"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="490dp"
            android:ems="10"
            android:inputType="textPassword"
            android:autofillHints="newPass"
            android:background="@drawable/edit_text_rounded_corner" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="550dp"
            android:layout_weight="1"
            android:backgroundTint="@color/buttonPurple"
            android:elevation="10dp"
            android:outlineProvider="background"
            android:stateListAnimator="@null"
            android:text="@string/save_change"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp" />

    </androidx.cardview.widget.CardView>

</LinearLayout>
