<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            app:tint="#424242"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/editProfileLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_page"
            android:textSize="15sp"
            android:textColor="#000000"
            android:background="@drawable/edit_profile_label_bg"
            android:padding="8dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:background="@drawable/pfp_ava"
            android:contentDescription="@string/profile_picture"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginTop="2dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <!-- eng score -->
        <androidx.cardview.widget.CardView
            android:id="@+id/eng_total_score"
            android:layout_width="114dp"
            android:layout_height="137dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="vertical"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/eng_total_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_score_title"
                    android:textColor="#000000"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/eng_total_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:textColor="#FFC60B"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/lineBlue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:gravity="center"
                    android:text="@string/eng_label"
                    android:textAlignment="center"
                    android:textColor="@color/blueSubject"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- math score -->
        <androidx.cardview.widget.CardView
            android:id="@+id/math_total_score"
            android:layout_width="114dp"
            android:layout_height="137dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="vertical"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/yellowCorner">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/math_total_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_score_title"
                    android:textColor="#000000"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/math_total_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15"
                    android:textColor="#0084FF"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/black33" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/math_label"
                    android:textColor="@color/blueSubject"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textAlignment="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- scn score -->
        <androidx.cardview.widget.CardView
            android:id="@+id/scn_total_score"
            android:layout_width="114dp"
            android:layout_height="137dp"
            android:gravity="center"
            android:orientation="vertical"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/scn_total_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_score_title"
                    android:textColor="#000000"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/scn_total_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="25"
                    android:textColor="#FFC60B"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/lineBlue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/scn_label"
                    android:textColor="@color/blueSubject"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textAlignment="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="30dp">

            <!-- button setting -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/setting_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal"
                    android:contentDescription="@string/setting">

                    <ImageButton
                        android:id="@+id/setting_icon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="33dp"
                        android:background="@null"
                        android:contentDescription="@string/setting"
                        android:scaleType="fitCenter"
                        android:src="@drawable/setting_icon" />

                    <Button
                        android:id="@+id/setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/setting"
                        android:textColor="#000000"
                        android:textSize="17sp" />

                    <ImageButton
                        android:id="@+id/next_icon1"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="117dp"
                        android:background="@null"
                        android:contentDescription="@string/next"
                        android:scaleType="fitCenter"
                        android:src="@drawable/next_icon" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <!-- button logout -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="250dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="6dp"
                    android:background="#66A6C4E5" />

                <View
                    android:layout_width="250dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="70dp"
                    android:background="#66A6C4E5" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/logout_icon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="35dp"
                        android:background="@null"
                        android:contentDescription="@string/logout"
                        android:scaleType="fitCenter"
                        android:src="@drawable/logout_icon" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/logout"
                        android:textColor="#000000"
                        android:textSize="17sp" />

                    <ImageButton
                        android:id="@+id/next_icon2"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="111dp"
                        android:background="@null"
                        android:contentDescription="@string/next"
                        android:scaleType="fitCenter"
                        android:src="@drawable/next_icon" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/nav_bar_corner"
            android:layout_marginTop="70dp"
            android:layout_gravity="bottom">

            <ImageButton
                android:id="@+id/score_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                android:contentDescription="@string/score"
                android:scaleType="fitCenter"
                android:layout_marginEnd="50dp"
                android:src="@drawable/score_icon" />

            <ImageButton
                android:id="@+id/home_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                android:contentDescription="@string/home"
                android:scaleType="fitCenter"
                android:layout_marginEnd="50dp"
                android:src="@drawable/home_icon" />

            <ImageButton
                android:id="@+id/profile_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                android:contentDescription="@string/profile"
                android:scaleType="fitCenter"
                android:src="@drawable/profile_icon" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>
