<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/dialogCard"
        android:layout_width="300dp"
        android:layout_height="430dp"
        android:layout_gravity="center"
        app:cardCornerRadius="35dp"
        app:cardElevation="14dp"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="22dp"
            android:layout_marginTop="3dp">

            <TextView
                android:id="@+id/dialogTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_score_title"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/dialogTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20"
                android:textSize="60sp"
                android:textStyle="bold"
                android:textColor="#FFC60B"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_score_label"
                    android:textSize="18sp"
                    android:textColor="#000000" />

                <Space
                    android:layout_width="47dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/dialogBest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": 10"
                    android:textSize="18sp"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fastest_time"
                    android:textSize="18sp"
                    android:textColor="#000000" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/dialogFastestTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": 03:00"
                    android:textSize="18sp"
                    android:textColor="#000000" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="#33000000" />

            <TextView
                android:id="@+id/dialogSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/eng_label"
                android:textAlignment="center"
                android:textColor="#5998EA"
                android:textSize="26sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>


